samples/_failures_safe/1761548287_e3a5f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a67b098.c: In function ‘main’:
./samples/SAFE/__tmp_2a67b098.c:149:12: error: missing terminating " character
  149 |     printf("\nDecompressed data (%zu bytes):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2a67b098.c:149:5: error: expected expression at end of input
  149 |     printf("\nDecompressed data (%zu bytes):
      |     ^~~~~~
./samples/SAFE/__tmp_2a67b098.c:149:5: error: expected declaration or statement at end of input
